[gd_scene load_steps=31 format=3 uid="uid://dde86yipj7oud"]

[ext_resource type="Script" path="res://Scenes/Player/PlayerChar.gd" id="1_18kdt"]
[ext_resource type="Texture2D" uid="uid://ssc7u23xetnu" path="res://Assets/Small-8-Direction-Characters_by_AxulArt/Small-8-Direction-Characters_by_AxulArt.png" id="1_c8vsd"]
[ext_resource type="Script" path="res://Scenes/Player/PlayerBodyScript.gd" id="2_isgs8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_es8lr"]
atlas = ExtResource("1_c8vsd")
region = Rect2(64, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yue2"]
atlas = ExtResource("1_c8vsd")
region = Rect2(64, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wm7q"]
atlas = ExtResource("1_c8vsd")
region = Rect2(64, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_caoeq"]
atlas = ExtResource("1_c8vsd")
region = Rect2(80, 120, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3rhr"]
atlas = ExtResource("1_c8vsd")
region = Rect2(80, 144, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bfiy"]
atlas = ExtResource("1_c8vsd")
region = Rect2(80, 168, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw1oq"]
atlas = ExtResource("1_c8vsd")
region = Rect2(48, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxmh1"]
atlas = ExtResource("1_c8vsd")
region = Rect2(48, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5t7"]
atlas = ExtResource("1_c8vsd")
region = Rect2(48, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_13h0q"]
atlas = ExtResource("1_c8vsd")
region = Rect2(96, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5lsk"]
atlas = ExtResource("1_c8vsd")
region = Rect2(96, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptbs3"]
atlas = ExtResource("1_c8vsd")
region = Rect2(96, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_74bn0"]
atlas = ExtResource("1_c8vsd")
region = Rect2(32, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0tj"]
atlas = ExtResource("1_c8vsd")
region = Rect2(32, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaxhy"]
atlas = ExtResource("1_c8vsd")
region = Rect2(32, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tokyh"]
atlas = ExtResource("1_c8vsd")
region = Rect2(0, 120, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5g4t"]
atlas = ExtResource("1_c8vsd")
region = Rect2(0, 144, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0asc"]
atlas = ExtResource("1_c8vsd")
region = Rect2(0, 168, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_022f2"]
atlas = ExtResource("1_c8vsd")
region = Rect2(112, 144, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqk3q"]
atlas = ExtResource("1_c8vsd")
region = Rect2(112, 120, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkd2h"]
atlas = ExtResource("1_c8vsd")
region = Rect2(112, 168, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3xhj"]
atlas = ExtResource("1_c8vsd")
region = Rect2(16, 168, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n8dr"]
atlas = ExtResource("1_c8vsd")
region = Rect2(16, 144, 15, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgkrr"]
atlas = ExtResource("1_c8vsd")
region = Rect2(16, 120, 15, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hc8yf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es8lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yue2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es8lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wm7q")
}],
"loop": true,
"name": &"WalkDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_caoeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3rhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bfiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3rhr")
}],
"loop": true,
"name": &"WalkDownLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw1oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxmh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw1oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v5t7")
}],
"loop": true,
"name": &"WalkDownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_13h0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5lsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13h0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptbs3")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74bn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74bn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaxhy")
}],
"loop": true,
"name": &"WalkRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tokyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5g4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0asc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5g4t")
}],
"loop": true,
"name": &"WalkUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_022f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqk3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_022f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkd2h")
}],
"loop": true,
"name": &"WalkUpLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3xhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n8dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgkrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n8dr")
}],
"loop": true,
"name": &"WalkUpRight",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gir1w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jjnol"]
radius = 8.0
height = 20.0

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource("1_18kdt")

[node name="Prevent Battle Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_mask = 2
script = ExtResource("2_isgs8")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(5, 5)
drag_left_margin = 0.5
drag_top_margin = 0.5
drag_right_margin = 0.5
drag_bottom_margin = 0.5
editor_draw_drag_margin = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_hc8yf")
animation = &"WalkDownLeft"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 1.45)
scale = Vector2(0.59, 0.59)
shape = SubResource("CapsuleShape2D_gir1w")

[node name="EnemyDetector" type="Area2D" parent="CharacterBody2D"]
collision_layer = 256
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/EnemyDetector"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_jjnol")

[connection signal="timeout" from="Prevent Battle Timer" to="." method="_on_prevent_battle_timer_timeout"]
[connection signal="area_entered" from="CharacterBody2D/EnemyDetector" to="." method="_on_enemy_detector_area_entered"]
